# drug-search-redis-vector-and-filtering

./: .env.local.example  .gitignore  DEPLOYMENT_STATUS.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_INSTRUCTIONS.md  NEXT_SESSION_BRIEFING.md  PORTABILITY_CHANGES.md  PORTABILITY_COMPLETE.md  PORTABILITY_GUIDE.md  do_migration.py  package.json  project.config.ts  pyproject.toml  sst-env.d.ts  sst.config.ts
.archive/: MIGRATION_LOG.md  cursor_chat_11_27.md
.devcontainer/: .env  Dockerfile  LAUNCH-TEMPLATE-GUIDE.md  README-COMPLETE-AUTOMATION.md  README-EC2-SETUP.md  README.md  add-asg-permissions-local.sh  add-windows-key-to-existing-instance.sh  aws-update-launch-template.sh  check-launch-template-setup.sh  copy-aws-credentials.sh  create-devcontainer-role-local.sh  create-devcontainer-role.ps1  create-devcontainer-role.sh  devcontainer-permissions-policy-updated.json  devcontainer-permissions-policy.json  devcontainer.json  docker-compose.yml  docker-compose.yml.backup  ec2-management-policy.json  launch-template-userdata-with-ssh.sh  launch-template-userdata.sh  mac-ssh-setup-instructions.md  mac-ssh-workaround.md  post-create.sh  set-project-root.sh  setup-aws-credentials-from-mac.sh  setup-ec2-host-minimal.sh  setup-ec2-host.sh  setup-ec2-permissions.sh  setup-session-manager-ssh-keys.sh  setup-ssh-automation.sh  setup-ssh-config-mac.sh  ssh-automation-setup.md  test-launch-template-script.sh  test-session-manager-ssh-windows.md  transfer-files-via-session-manager.sh  update-launch-template-with-role-local.sh  update-launch-template-with-role.ps1  (+3 more)
infra/: api.ts  (+5 more)
(+276 files in other folders)
