[project]
name = "DAW"
version = "1.0.0"
description = "SST v3 Monorepo"
requires-python = ">=3.12"
dependencies = [
    # Core AWS dependencies
    "boto3>=1.34.131",
    "botocore>=1.34.131",
    # Database driver
    "psycopg2-binary>=2.9.10",
]

[tool.uv]
# This is a workspace root, not a package itself
package = false

[tool.uv.workspace]
# SST v3 monorepo structure - Python packages
members = [
    "packages/core",
    "packages/jobs",
    "packages/functions",  # Lambda functions package (moved per SST monorepo template)
    # "packages/scripts",  # Temporarily excluded - not needed for Lambda
]

[dependency-groups]
dev = [
    # Development tools
    "requests>=2.32.5",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

